# gRPC_learn

./: Cargo.toml  build.rs
proto/: sys_info.proto
src/: main.rs  server.rs
