[package]
name = "gRPC_learn"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sys_info_server"
path = "src/server.rs"

[[bin]]
name = "sys_info_client"
path = "src/main.rs"

[dependencies]
sysinfo = "0.30.13"
tonic = "0.12.1"
prost = "0.13.1"
tokio = { version = "1.38.1", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.5.9", features = ["derive"] }

[build-dependencies]
tonic-build = "0.12.1"
